# Command

./: .gitignore  CMakeLists.txt  Command.cpp  Command.h  CopyCommand.cpp  CopyCommand.h  CutCommand.cpp  CutCommand.h  Invoker.cpp  Invoker.h  LICENSE  ObjectReceiver.cpp  ObjectReceiver.h  PasteCommand.cpp  PasteCommand.h  README.md  Receiver.h  main.cpp
